# shipping-service

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.circleci/: config.yml
src/: run.py
src/app/: __init__.py
src/app/config/: .env  app_config.py  bootstrapDB.py  raw_data.csv
src/app/domain/adapters/: shipping_data.py  shipping_request.py
src/app/domain/entity/: region_entity.py  shipping_request_entity.py
src/app/domain/repository/: region_fee_base.py
src/app/domain/service/: shipping_calc.py
src/app/resources/entity/: models.py
src/app/resources/repository/: region_fee.py
src/app/web/resources/: shipping_fee.py
src/app/web/router/: blueprints.py
src/shippingservice/: __init__.py
src/shippingservice/domain/adapters/: shipping_request.py
src/shippingservice/domain/entity/: region_entity.py  region_fee_entity.py  shipping_request_entity.py  zipcode_fee_entity.py
src/shippingservice/domain/repository/: region_fee_repository.py  shipping_repository.py
src/shippingservice/domain/service/: shipping_calc.py
tests/: config_test.py  conftest.py
tests/unit/: test_domain.py
